@@ -5296,8 +5296,6 @@ static GLfloat		sBaseMass = 0.0;
 
 - (void) setGuiToShortRangeChartScreen
 {
-	double			distance = distanceBetweenPlanetPositions(target_system_seed.d,target_system_seed.b,galaxy_coordinates.x,galaxy_coordinates.y);
-	double			estimatedTravelTime = distance * distance;
 	GuiDisplayGen	*gui = [UNIVERSE gui];
 	OOGUIScreenID	oldScreen = gui_screen;
 	
@@ -5312,19 +5310,21 @@ static GLfloat		sBaseMass = 0.0;
 	{
 		target_system_seed = [UNIVERSE findSystemAtCoords:cursor_coordinates withGalaxySeed:galaxy_seed];
 	}
-	NSString *targetSystemName = [[UNIVERSE getSystemName:target_system_seed] retain];  // retained
 	
+	// now calculate the distance.
+	double			distance = distanceBetweenPlanetPositions(target_system_seed.d,target_system_seed.b,galaxy_coordinates.x,galaxy_coordinates.y);
+	double			estimatedTravelTime = distance * distance;
+	
+	NSString		*targetSystemName = [[UNIVERSE getSystemName:target_system_seed] retain];  // retained
 	[UNIVERSE preloadPlanetTexturesForSystem:target_system_seed];
 
 	// GUI stuff
 	{
 		[gui clearAndKeepBackground:!guiChanged];
 		[gui setTitle:DESC(@"short-range-chart-title")];
-		
-		[gui setText:targetSystemName	forRow:19];
+		[gui setText:targetSystemName forRow:19];
 		[gui setText:[NSString stringWithFormat:DESC(@"short-range-chart-distance-f"), distance]   forRow:20];
-		[gui setText:(distance <= (fuel/10.0f) ? [NSString stringWithFormat:DESC(@"short-range-chart-est-travel-time-f"), estimatedTravelTime] : (id)@"") forRow:21];
-		
+		[gui setText:((distance > 0 && distance <= fuel/10.0f) ? [NSString stringWithFormat:DESC(@"short-range-chart-est-travel-time-f"), estimatedTravelTime] : @"") forRow:21];
 		[gui setShowTextCursor:NO];
 	}
 	/* ends */
